--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Index.cshtml
@@ -24,7 +24,7 @@
                 <a class="btn btn-info" href="../ReqFuncional">Mostrar Todos</a>
             </div>
             <div class="col-lg-2 col-lg-push-5">
-                <a class="btn btn-success" href="ReqFuncional/Create">Crear</a>
+                <a class="btn btn-success" href="../ReqFuncional/Create">Crear</a>
             </div>
         </div>
     </p>
