--- a/ProyectoInge1/ProyectoInge1/Views/Proyectos/Detalles.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Proyectos/Detalles.cshtml
@@ -72,7 +72,7 @@
     <div class="form-group">
         <label class="control-label col-md-2">Fecha de Inicio:</label>
         <div class="col-md-10">
-            @Html.EditorFor(model => model.proyecto.fechaInicio, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+            @Html.TextBoxFor(model => model.proyecto.fechaInicio, new { @class = "form-control datepicker", placeholder = "DATE", @readonly = true })
             @Html.ValidationMessageFor(model => model.proyecto.fechaInicio, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -81,7 +81,7 @@
     <div class="form-group">
         <label class="control-label col-md-2">Fecha Final:</label>
         <div class="col-md-10">
-            @Html.EditorFor(model => model.proyecto.fechaFinal, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+            @Html.TextBoxFor(model => model.proyecto.fechaFinal, new { @class = "form-control datepicker2", placeholder = "DATE", @readonly = true })
             @Html.ValidationMessageFor(model => model.proyecto.fechaFinal, "", new { @class = "text-danger" })
         </div>
     </div><br /><br />
@@ -133,7 +133,7 @@
                     @Html.TextBoxFor(model => model.proyecto.fechaInicio, new { @class = "form-control datepicker", placeholder = "DATE" })
                 </div>
             </div>
-
+            <br /><br />
             <div class="form-group">
                 @Html.CustomLabelFor(model => model.proyecto.fechaFinal, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -149,7 +149,7 @@
                                                                        Model.proyecto.estado, new { @class = "form-control" })
             </div>
         </div>
-            <br /><br />
+            <br /><br /><br /><br />
             <div class="form-group">
                 <label class="control-label col-md-2">Lider:</label>
                 <div class="col-md-10">
