--- a/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
@@ -105,49 +105,49 @@
                 @Html.ValidationMessageFor(model => model.proyecto.descripcion, "", new { @class = "text-danger" })
             </div>
         </div>
+@*
+    <div class="control-label"style="display:none">
+        @Html.CustomLabelFor(model => model.proyecto.lider, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.HiddenFor(model => model.Participantes, new { @id = "output" })
+        <select name="Lider" type="text" class="form-control col-md-2" id="a" size="2"></select>
+        <a class="pull-left" onclick="listbox_moveacross('d', 'a')" href="#">&lt;&lt;</a>
+        <br />
+        <a class="pull-left" onclick="listbox_moveacross('a', 'd')" href="#">&gt;&gt;</a>
+    </div>
+    <br /><br /><br />
+    <div>
+        <div class="control-label">
 
-        <div class="control-label"style="display:none">
-            @Html.CustomLabelFor(model => model.proyecto.lider, htmlAttributes: new { @class = "control-label col-md-2" })
-            @Html.HiddenFor(model => model.Participantes, new { @id = "output" })
-            <select name="Lider" type="text" class="form-control col-md-2" id="a" size="2"></select>
-            <a class="pull-left" onclick="listbox_moveacross('d', 'a')" href="#">&lt;&lt;</a>
-            <br />
-            <a class="pull-left" onclick="listbox_moveacross('a', 'd')" href="#">&gt;&gt;</a>
+            <label class="control-label col-md-2">Desarrollador</label>
+
         </div>
-        <br /><br /><br />
+        <select class="form-control col-md-2" style="width:20em" id="s" size="10"></select>
         <div>
-            <div class="control-label">
+            <br />
+            <a onclick="listbox_moveacross('d', 's')" href="#">&lt;&lt;</a>
+            <br />
+            <a onclick="listbox_moveacross('s', 'd')" href="#">&gt;&gt;</a>
+        </div>
+        <div>
 
-                <label class="control-label col-md-2">Desarrollador</label>
-
-            </div>
-            <select class="form-control col-md-2" style="width:20em" id="s" size="10"></select>
             <div>
-                <br />
-                <a onclick="listbox_moveacross('d', 's')" href="#">&lt;&lt;</a>
-                <br />
-                <a onclick="listbox_moveacross('s', 'd')" href="#">&gt;&gt;</a>
-            </div>
-            <div>
-                
-                <div>
-                    <select class="form-control col-md-2" style="width:20em; margin-left:2em;" id="d" size="10">
+                <select class="form-control col-md-2" style="width:20em; margin-left:2em;" id="d" size="10">
 
-                        @*Aqui se insertan los usuarios*@
+                    Aqui se insertan los usuarios*@
                         
-                        @foreach (var item in Model.listaUsuarios)
-                        {
-                            var ced = item.cedula;
-                            <option value=@ced>
-                                @Html.DisplayFor(modelItem => item.nombre)
-                                @Html.DisplayFor(modelItem => item.apellidos)
-                                @Html.Raw(" ")
-                            </option>
-                        }
+                       @* @foreach (var item in Model.listaUsuarios)
+    {
+        var ced = item.cedula;
+        <option value=@ced>
+            @Html.DisplayFor(modelItem => item.nombre)
+            @Html.DisplayFor(modelItem => item.apellidos)
+            @Html.Raw(" ")
+        </option>
+    }
                     </select>
                 </div>
             </div>
-        </div>
+        </div>*@
         @*Fin cajas de seleccion*@
         <div class="form-group">
             <div class=" col-md-8">
