--- a/ProyectoInge1/ProyectoInge1/Views/Proyectos/Detalles.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Proyectos/Detalles.cshtml
@@ -44,10 +44,12 @@
 <div class="elementoMostrar">
     <div class="col-lg-2 ">
         <a class="btn btn-success" " onclick="esconderEditar()">Modificar</a>
-        <div class="col-lg-2 col-lg-push-6">
-                <button type="submit" class="btn btn-danger"style="margin-left:2.5em;" onclick="CancelarE()">Eliminar</button>
-
+        <div class="col-lg-2 col-lg-push-10">
+               <!-- <button type="submit" class="btn btn-danger"style="margin-left:2.5em;" onclick="CancelarE()">Eliminar</button>-->
+                 @Html.ActionLink("Eliminar", "Eliminar",null,new { confirm = true, Proyecto = "pruebaB"},new { @class = "btn btn-danger", @onclick = "return CancelarE();" })
+            
             </div>
+
     </div>
     <br /><br /><br />
     @*nombre*@
