--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Details.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Details.cshtml
@@ -16,8 +16,7 @@
         <div class="form-horizontal">
             <a class="btn btn-success" onclick="esconderEditar()">Modificar</a>
             <div class="col-lg-2 col-lg-push-6">
-                <a class="btn btn-danger" id='@(Model.Requerimiento.id)' onclick="borrar(this)">Eliminar</a>
-                @Html.ActionLink("Eliminar", "Eliminar", "ReqFuncional", new { confirm = true, Req = Model.Requerimiento.id }, new { @style = "color:white;", @onclick = "return Cancelar();" })
+                @Html.ActionLink("Eliminar", "Eliminar", null, new { confirm = true, Proyecto = Model.Requerimiento.id }, new { @class = "btn btn-danger", @onclick = "return CancelarE();" })
             </div>
             <dl class="dl-horizontal">
                 <div class="form-group">
@@ -131,13 +130,14 @@
         $('.elementoModificar').show();
 
     }
-    function cancelar() {
-        window.location.replace('../../Usuarios')
+    function CancelarE() {
+        if (confirm("Esta seguro que desea borrar este proyecto ?")) {
+            return true;
+        } else {
+            return false;
+        }
 
     }
-    function borrar(element) {
-        var elementid = element.id;
-        window.location.replace('../Eliminar/'+elementid)
-    }
+    
     </script>
 }
