--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
@@ -61,12 +61,16 @@ window.onload = load_all
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <!--AGREGAR UN ID DE REQUERIMIENTO-->
-        
+
 
             <!--AGREGAR UN PROYECTO DE REQUERIMIENTO-->
             <div class="form-group">
                 <label class="control-label col-md-2">Proyecto</label>
                 <div class="col-md-10">
+                    @Html.DisplayFor(model => Model.nProy)
+                    @{ 
+                        var id = Model.nProy;
+                    }
                     @Html.EditorFor(model => model.Requerimientos.nomProyecto, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Requerimientos.nomProyecto, "", new { @class = "text-danger" })
                 </div><br/><br />
@@ -242,6 +246,7 @@ window.onload = load_all
  
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
+                       @* @Html.ActionLink("Crear", "Create", new { NProyecto = id }, new { @class = "btn btn-success", @style = "color:white" })*@
                         <input type="submit" value="Aceptar" class="btn btn-primary" />
                         <div class="btn btn-danger" style="color:white;" />
                         @Html.ActionLink("Cancelar", "Index", null, new { @style = "color:#FFFFFF;" })
